[package]
name        = "ulp-normalizer"
version     = "0.4.0"
edition     = "2021"

# MILESTONE: v0.3.0-GOLDPARSE proven on real-world dirty data (20/30)
# v0.4.0: Performance architecture + new UI controls + format classifier

[[bin]]
name = "ulp-normalizer"
path = "src/main.rs"

[dependencies]
# Core processing
memmap2               = "0.9"
rayon                 = "1.10"
regex                 = "1.10"
csv                   = "1.3"
anyhow                = "1.0"
thiserror             = "1.0"
once_cell             = "1.19"
log                   = "0.4"
env_logger            = "0.11"

# Config
toml                  = "0.8"
serde                 = { version = "1.0", features = ["derive"] }

# Encoding
chardetng             = "1.0"
encoding_rs           = "0.8"

# Post-processing
base64                = "0.22"
unicode-normalization = "0.1"

# NEW v0.4.0: Performance architecture
# Lock-free concurrent hash map — global dedup in writer thread
dashmap               = "6.0"
# Zero-cost bounded channel — replaces Arc<Mutex<Writer>> on hot path
crossbeam-channel     = "0.5"
# Accurate logical CPU count for thread default
num_cpus              = "1.16"

# GUI
native-windows-gui    = { version = "1.0.13", features = [
    "notice",
    "progress-bar",
    "status-bar",
    "text-box",
    "file-dialog",
]}
native-windows-derive = "1.0.5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
